--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-venv/
+# Python
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+venv/
+.env/
+
+# Django
+db.sqlite3
+media/
+staticfiles/
+
+# IDE
+.idea/
+.vscode/
+.DS_Store
